--- a/tp10-formulaire.html
+++ b/tp10-formulaire.html
@@ -1,4 +1,4 @@
-<!--by wsem fais par le futur-->
+<!--by wsem fais par le fan IT -->
 <!DOCTYPE html>
 <html lang="fr">
 <head>
@@ -21,7 +21,7 @@
   <script src="modale-view.js"></script>
  
   <style>
-    /* Votre style ici (inchangé) */
+    /* Mon style */
     body {
       font-family: 'Trebuchet MS', Arial, sans-serif;
       background-color: #ebf5eb;
